[package]
name = "up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
anyhow = "1"
libc = "0.2"
notify = "4"
glob = "0.3"
colored = "2"
nix = "0.23"
signal-hook = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }