[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
anyhow = "1.0.65"
signal-hook = "0.3.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["full"] }
nix = "0.25.0"
